# CrewAI_Stock_Forecast

./: README.md  pyproject.toml
src/tsf_aapl/: crew.py  log.txt  main.py
src/tsf_aapl/Input/: X_today.npy  date_y_lstm.npy  feature_scalers.pkl  y_lstm.npy
src/tsf_aapl/config/: agents.py  tasks.py
src/tsf_aapl/data/: aapl_raw.csv  apple_sentiment_final_for_lstm.csv  craw_sentiment.py  eda.py  missingdays.csv  newws.py  paper.csv  sentiment_news.py
src/tsf_aapl/logs/: log_paper.csv  lstm_eval_short_log.csv  lstm_online_log.csv  predict_log.csv
src/tsf_aapl/models/: model.pth
src/tsf_aapl/tools/: data_feature_tool.py  data_raw_tool.py  data_sentiment_tool.py  email_notification_tool.py  evaluate_model_tool.py  predict_today_tool.py  predict_update_tool.py  train_initial_model.py
