[project]
name = "tsf_aapl"
version = "0.1.0"
description = "tsf_aapl using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
tsf_aapl = "tsf_aapl.main:run"
run_crew = "tsf_aapl.main:run"
train = "tsf_aapl.main:train"
replay = "tsf_aapl.main:replay"
test = "tsf_aapl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
